Minor revisions mostly html/css; fixed bug where mission reset method would fail trying to make visible a non-existent row in astronaut table because it was a cached page not shown in the DOM.

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+  font-family: 'JetBrains Mono', monospace;
+  font-size: .75rem;
+}
+
 div {
   padding: 5px;
 }
@@ -14,17 +19,18 @@ div {
 
 .header {
   grid-area: header;
-  font-size: 1.75rem;
   font-weight: bold;
   background-color: skyblue;
   padding: 3px;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .message {
   grid-area: message;
-  font-size: 1.2rem;
   padding: 7px;
   margin: 2px;
+  font-size: .875rem;
 }
 
 .parts-left {
@@ -38,6 +44,9 @@ div {
   text-orientation: upright;
   text-align: center;
   letter-spacing: .5rem;
+  font-size: .875rem;
+  font-weight: bold;
+
 }
 
 .mission {
@@ -57,7 +66,6 @@ table {
 }
 
 th, td {
-  font-size: .875rem;
   padding: .5em .75em;
 }
 
@@ -74,7 +82,6 @@ td {
   display: inline-grid;
   margin-top: 1rem;
   margin-right: 1rem;
-  font-size: .875rem;
 }
 
 .mission-part-img {
@@ -91,6 +98,10 @@ td {
   background-color: lightcoral;
 }
 
+.message-error {
+  background-color: yellow;
+}
+
 .message-info {
   background-color: transparent;
 }
@@ -104,15 +115,11 @@ td {
   color: white;
   margin-left: 1px;
   padding: 1px;
-  font-size: .750rem;
+  font-size: .6875rem;
 }
 
-.listing-heading {
-  font-size: 1.5rem;
+.list-heading {
+  font-size: 1.25rem;
   font-weight: bold;
 }
 
-.page-heading {
-  font-size: 1.75rem;
-  font-weight: bold;
-}
